Cycles coordinate extension modes not working as expected #45885

Closed
opened 2015-08-24 03:29:38 +02:00 by gandalf3 · 8 comments
Member

System Information
Archlinux

Blender Version
Broken: latest master (4f61de6)

Short description of error

  • Clip shows an extension of the texture on the top and right sides
  • Extend doesn't extend the texture smoothly, except on the top and right sides

Exact steps for others to reproduce the error

  1. Open texture_coordinate_extension_mode_bug.blend
  2. Change the extension mode
**System Information** Archlinux **Blender Version** Broken: latest master (4f61de6) **Short description of error** * *Clip* shows an extension of the texture on the top and right sides * *Extend* doesn't extend the texture smoothly, except on the top and right sides **Exact steps for others to reproduce the error** 1. Open [texture_coordinate_extension_mode_bug.blend](https://archive.blender.org/developer/F227295/texture_coordinate_extension_mode_bug.blend) 2. Change the extension mode
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

By chance is this the same as #45769

By chance is this the same as #45769
Author
Member

@Blendify

Yes, partially. That report doesn't seem to mention the unevenness of the Extend option.

@Blendify Yes, partially. That report doesn't seem to mention the unevenness of the *Extend* option.

This issue was referenced by aac6ee6b87

This issue was referenced by aac6ee6b870eb968d37c16039e6cdc579df17288

This issue was referenced by blender/cycles@7b957ea88d

This issue was referenced by blender/cycles@7b957ea88d6d2dafeb2a619957c0b338313fc1d2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45885
No description provided.