Fix T45885: Cycles coordinate extension modes not working as expected Fix T45769: Image Texture Node clipping bug

Simple mistakes in the normalized/pixel-space coordinates handling.

Render tests for this feature are coming.